# caps-framework

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  structure.txt
caps/: __init__.py  pipeline.py
caps/acquisition/: __init__.py  loaders.py  signal_matrix.py  validators.py
caps/compression/: __init__.py  clustering.py  dimensionality.py  entropy_weighting.py
caps/refinement/: __init__.py  alignment.py  qualitative.py
caps/segmentation/: __init__.py  maps.py  profiles.py
caps/utils/: __init__.py  io.py  metrics.py
caps/visualization/: __init__.py  report.py  segment_map.py  signal_plots.py
data/: README.md
docs/: Pipeline Results.md  api.md  examples.md  index.md  theory.md
notebooks/: 01_signal_acquisition.ipynb  02_compression_pipeline.ipynb  03_qualitative_refinement.ipynb  04_full_pipeline_demo.ipynb
tests/: test_acquisition.py  test_compression.py  test_integration.py  test_refinement.py
